--- a/packetcrypt-annmine/Cargo.toml
+++ b/packetcrypt-annmine/Cargo.toml
@@ -16,3 +16,4 @@ bytes = "0.5"
 reqwest = { version = "0.10", features = ["stream"], default-features = false }
 serde_json = "1.0"
 hex = "0.4"
+ansi_term = "0.12"
